k8s/backends.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
  namespace: retail-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
        - name: catalog
          image: public.ecr.aws/aws-containers/retail-store-sample-catalog:0.7.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: retail-app
spec:
  selector:
    app: catalog
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts
  namespace: retail-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carts
  template:
    metadata:
      labels:
        app: carts
    spec:
      containers:
        - name: carts
          image: public.ecr.aws/aws-containers/retail-store-sample-cart:0.7.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: carts
  namespace: retail-app
spec:
  selector:
    app: carts
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: retail-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: public.ecr.aws/aws-containers/retail-store-sample-orders:0.7.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: retail-app
spec:
  selector:
    app: orders
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout
  namespace: retail-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkout
  template:
    metadata:
      labels:
        app: checkout
    spec:
      containers:
        - name: checkout
          image: public.ecr.aws/aws-containers/retail-store-sample-checkout:0.7.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: checkout
  namespace: retail-app
spec:
  selector:
    app: checkout
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-redis
  namespace: retail-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkout-redis
  template:
    metadata:
      labels:
        app: checkout-redis
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: checkout-redis
  namespace: retail-app
spec:
  selector:
    app: checkout-redis
  ports:
    - port: 6379
      targetPort: 6379
